cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(epine-sdk-test VERSION 1.0.0)
include(${CMAKE_CURRENT_SOURCE_DIR}/lib/epine-sdk-cpp/CMakeLists.txt)
add_executable(sdk_test main.cpp)
set_property(TARGET sdk_test PROPERTY CXX_STANDARD 11)
set_property(TARGET sdk_test PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(sdk_test epine-sdk)
target_link_libraries(sdk_test pthread)
message(STATUS ${Boost_INCLUDE_DIRS} )
#target_include_directories(sdk_test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" ${Boost_INCLUDE_DIRS} )
